--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
   },
   "dependencies": {
     "react": "15.4.2",
-    "react-dom": "15.4.2"
+    "react-dom": "15.4.2",
+    "express": "4.16.1",
+    "randomcolor": "^0.5.3",
+    "uuid": "^3.1.0",
+    "ws": "3.2.0"
   }
 }
